# pomodoro

./: .dir-locals.el  LICENSE  cabal.project  flake.nix  justfile  pomodoro.cabal
app/: Main.hs
src/Pomodoro/: Domain.hs  Web.hs
test/: Spec.hs
ui/src/: Main.elm
