cabal-version:       3.0
name:                pomodoro
version:             0.1.0.0
author:              -
maintainer:          -
category:            Scheduling
build-type:          Simple
license:             ISC
license-file:        LICENSE
synopsis:            Pomodoro
description:         Pomodoro.
Homepage:            https://github.com/blackheaven/pomodoro
-- tested-with:         GHC==9.6.6, GHC==9.8.4, GHC==9.10.1, GHC==9.12.1

common common-all
  default-language: GHC2021
  build-depends:
      base == 4.*
    , aeson
    , mtl
    , servant
    , servant-server
    , time >= 1.9 && < 2
    , text
    , wai
  default-extensions:
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    OverloadedStrings
    OverloadedRecordDot
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeOperators

library
  import: common-all
  hs-source-dirs: src
  exposed-modules:
    Pomodoro.Domain
    Pomodoro.Web
  other-modules:
    Paths_pomodoro
  autogen-modules:
    Paths_pomodoro
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

test-suite spec
  import: common-all
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules:
    Paths_pomodoro
  autogen-modules:
    Paths_pomodoro
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
  build-depends:
      base
    , pomodoro
    , hspec
    , hspec-core
    , hspec-wai
    , http-client
    , http-types
    , servant-client
    , servant-client-core
    , warp
